--- a/gui.yml
+++ b/gui.yml
@@ -86,7 +86,7 @@ stages:
               enabled: true
               inputs:
                 scriptPath: /home/sistudio/agent/jira/addComment.py
-                arguments: 'Design started for ${{ parameters.projectName }} ${{ parameters.productName }} ${{ parameters.releaseName }}'
+                arguments: 'Design_started_for_${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}'
                 pythonInterpreter: /usr/bin/python3
             - task: PythonScript@0
               displayName: 'Plato Login for ${{ parameters.productName }} ${{ parameters.releaseName }}'
@@ -126,7 +126,7 @@ stages:
               enabled: true
               inputs:
                 scriptPath: /home/sistudio/agent/jira/addComment.py
-                arguments: 'Design started for ${{ parameters.projectName }} ${{ parameters.productName }} ${{ parameters.releaseName }}'
+                arguments: 'Design_started_for_${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}'
                 pythonInterpreter: /usr/bin/python3
             - task: PythonScript@0
               displayName: 'Plato Login for ${{ parameters.productName }} ${{ parameters.releaseName }}'
@@ -205,4 +205,12 @@ stages:
       - job: build
         displayName: 'Depyment is required for  ${{ parameters.productName }}  and release ${{parameters.releaseName}}'
         steps:
+        - task: PythonScript@0
+           displayName: 'Add  Jira Comment for  ${{ parameters.projectName }} ${{ parameters.productName }} ${{ parameters.releaseName }}'
+           continueOnError: true
+           enabled: true
+           inputs:
+             scriptPath: /home/sistudio/agent/jira/addComment.py
+             arguments: 'Deployment_started_for_${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}'
+             pythonInterpreter: /usr/bin/python3
         - script: echo deployment started for  ${{ parameters.productName }}  and release ${{parameters.releaseName}}
