--- a/gui.yml
+++ b/gui.yml
@@ -89,7 +89,7 @@ stages:
           enabled: true
           inputs:
             scriptPath: /home/sistudio/agent/git/createBranch.py
-            arguments: '$${ parameters.token4GIT }} 29761 ${{ parameters.customer }}_${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}'
+            arguments: $${ parameters.token4GIT }} 29761 ${{ parameters.customer }}_${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}
             pythonInterpreter: /usr/bin/python3
 
 - ${{ if eq(parameters.designRequired, true) }}:
