--- a/gui.yml
+++ b/gui.yml
@@ -61,7 +61,7 @@ stages:
         name: default
       jobs:
       - job: requirement
-        displayName: 'Requirement for ${{ parameters.customer }} ${{ parameters.projectName }} ${{ parameters.productName }} ${{ parameters.releaseName }}'
+        displayName: 'Requirement Phase started for ${{ parameters.customer }} ${{ parameters.projectName }} ${{ parameters.productName }} ${{ parameters.releaseName }}'
         steps:
         - script: >
             rm -rf /home/sistudio/agent/${{ parameters.customer }}_${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }};
@@ -69,7 +69,7 @@ stages:
             echo "customerName= ${{ parameters.customer }};projectName=${{ parameters.projectName }};productName=${{ parameters.productName }};release=${{ parameters.releaseName }}" > /home/sistudio/agent/${{ parameters.customer }}_${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}/projectDetails.txt
 
         - task: PythonScript@0
-          displayName: create Jira for  ${{ parameters.projectName }} ${{ parameters.productName }} ${{ parameters.releaseName }}
+          displayName: JIRA create Task for  ${{ parameters.projectName }} ${{ parameters.productName }} ${{ parameters.releaseName }}
           continueOnError: true
           enabled: true
           inputs:
@@ -78,7 +78,7 @@ stages:
             pythonInterpreter: /usr/bin/python3
             
         - task: PythonScript@0
-          displayName: 'create branch in GIT for   ${{ parameters.customer }}_${{ parameters.projectName }}_${{ parameters.productName }} ${{ parameters.releaseName }}'
+          displayName: 'GIT: fork Blueprint Artefacts for ${{ parameters.customer }}_${{ parameters.projectName }}_${{ parameters.productName }} ${{ parameters.releaseName }}'
           continueOnError: true
           enabled: true
           inputs:
@@ -96,10 +96,10 @@ stages:
       jobs:
       - ${{ if contains(parameters.productName, 'CFX') }}:
           - job: Design4CFX
-            displayName: 'Design for ${{ parameters.productName }} ${{ parameters.releaseName }}'
+            displayName: 'Design Phase started for ${{ parameters.productName }} ${{ parameters.releaseName }}'
             steps:
             - task: PythonScript@0
-              displayName: 'Add  Jira Comment for  ${{ parameters.projectName }} ${{ parameters.productName }} ${{ parameters.releaseName }}'
+              displayName: 'Jira : Add  Comment for  ${{ parameters.projectName }} ${{ parameters.productName }} ${{ parameters.releaseName }}'
               continueOnError: true
               enabled: true
               inputs:
@@ -107,7 +107,7 @@ stages:
                 arguments: 'Design_started_for_${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}'
                 pythonInterpreter: /usr/bin/python3
             - task: PythonScript@0
-              displayName: 'Plato Login for ${{ parameters.productName }} ${{ parameters.releaseName }}'
+              displayName: 'Plato: Login for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               continueOnError: true
               enabled: true
               inputs:
@@ -117,7 +117,7 @@ stages:
                 workingDirectory: /home/sistudio/agent/plato/
 
             - task: PythonScript@0
-              displayName: 'Plato Create Project for ${{ parameters.productName }} ${{ parameters.releaseName }}'
+              displayName: 'Plato: Create Project for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               continueOnError: true
               enabled: true
               inputs:
@@ -126,7 +126,7 @@ stages:
                 pythonInterpreter: /usr/bin/python3
 
             - task: PythonScript@0
-              displayName: 'Download XML for ${{ parameters.productName }} ${{ parameters.releaseName }}'
+              displayName: 'Plato: Download XML for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               continueOnError: true
               enabled: true
               inputs:
@@ -136,10 +136,10 @@ stages:
 
       - ${{ if contains(parameters.productName, 'TAS') }}:
           - job: Design4TAS
-            displayName: 'Design  ${{ parameters.productName }} ${{ parameters.releaseName }}'
+            displayName: 'Plato: Design Phase for ${{ parameters.productName }} ${{ parameters.releaseName }}'
             steps:
             - task: PythonScript@0
-              displayName: 'Add  Jira Comment for  ${{ parameters.projectName }} ${{ parameters.productName }} ${{ parameters.releaseName }}'
+              displayName: 'Jira: Add Comment for  ${{ parameters.projectName }} ${{ parameters.productName }} ${{ parameters.releaseName }}'
               continueOnError: true
               enabled: true
               inputs:
@@ -147,7 +147,7 @@ stages:
                 arguments: 'Design_started_for_${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}'
                 pythonInterpreter: /usr/bin/python3
             - task: PythonScript@0
-              displayName: 'Plato Login for ${{ parameters.productName }} ${{ parameters.releaseName }}'
+              displayName: 'Plato: Login for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               continueOnError: true
               enabled: true
               inputs:
@@ -157,7 +157,7 @@ stages:
                 workingDirectory: /home/sistudio/agent/plato/
 
             - task: PythonScript@0
-              displayName: 'Plato Create Project for ${{ parameters.productName }} ${{ parameters.releaseName }}'
+              displayName: 'Plato: Create Project for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               continueOnError: true
               enabled: true
               inputs:
@@ -166,7 +166,7 @@ stages:
                 pythonInterpreter: /usr/bin/python3
 
             - task: PythonScript@0
-              displayName: 'Download XML for ${{ parameters.productName }} ${{ parameters.releaseName }}'
+              displayName: 'Plato: Download XML for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               continueOnError: true
               enabled: true
               inputs:
@@ -176,10 +176,10 @@ stages:
 
       - ${{ if contains(parameters.productName, 'NEF') }}:
           - job: Design4NEF
-            displayName: Design for ${{ parameters.productName }} ${{ parameters.releaseName }}
+            displayName: Design Phase for ${{ parameters.productName }} ${{ parameters.releaseName }}
             steps:
             - task: PythonScript@0
-              displayName: 'Add  Jira Comment for  ${{ parameters.projectName }} ${{ parameters.productName }} ${{ parameters.releaseName }}'
+              displayName: 'Jira: Add Comment for  ${{ parameters.projectName }} ${{ parameters.productName }} ${{ parameters.releaseName }}'
               continueOnError: true
               enabled: true
               inputs:
@@ -187,7 +187,7 @@ stages:
                 arguments: 'Design_started_for_${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}'
                 pythonInterpreter: /usr/bin/python3
             - task: PythonScript@0
-              displayName: 'Plato Login for ${{ parameters.productName }} ${{ parameters.releaseName }}'
+              displayName: 'Plato: Login for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               continueOnError: true
               enabled: true
               inputs:
@@ -197,7 +197,7 @@ stages:
                 workingDirectory: /home/sistudio/agent/plato/
 
             - task: PythonScript@0
-              displayName: 'Plato Create Project for ${{ parameters.productName }} ${{ parameters.releaseName }}'
+              displayName: 'Plato: Create Project for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               continueOnError: true
               enabled: true
               inputs:
@@ -206,7 +206,7 @@ stages:
                 pythonInterpreter: /usr/bin/python3
 
             - task: PythonScript@0
-              displayName: 'Download XML for ${{ parameters.productName }} ${{ parameters.releaseName }}'
+              displayName: 'Plato: Download XML for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               continueOnError: true
               enabled: true
               inputs:
@@ -221,10 +221,10 @@ stages:
         name: default
       jobs:
       - job: build
-        displayName: 'Depyment is required for  ${{ parameters.productName }}  and release ${{parameters.releaseName}}'
+        displayName: 'Deployment Phase for  ${{ parameters.productName }}  and release ${{parameters.releaseName}}'
         steps:
         - task: PythonScript@0
-          displayName: 'Add  Jira Comment for  ${{ parameters.projectName }} ${{ parameters.productName }} ${{ parameters.releaseName }}'
+          displayName: 'Jira: Add Comment for  ${{ parameters.projectName }} ${{ parameters.productName }} ${{ parameters.releaseName }}'
           continueOnError: true
           enabled: true
           inputs:
